<resources>
    <string name="app_name">amanshopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loggin_failed">Loggin failed</string>
    <string name="wellcome">wellcome</string>
    <string name="search_now">search now</string>
</resources>